white space issue resolved

--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,4 @@
   margin: 0px;
   padding: 0px;
   padding: 0px;
-  margin-top: -20px;
 }
